2011-10-23

	* add XT_PAX read/write in paxct-ng.c and paxmodule.c
	* create and/or copy XT_PAX flags to/from PT_PAX in paxctl-ng.c
	* clean up error handling in paxctl-ng.c
	* remove EI_PAX doc and add XT_PAX doc

2011-10-17  Anthony G. Basile <blueness@gentoo.org>

	* add search by full library path in revdep-pax
	* add pax_setflags to paxmodule.c
	* add setflags to mismatched binaries/libraries in revdep-pax
	* removed EI_PAX markings, bug #387459

2011-10-12  Anthony G. Basile <blueness@gentoo.org>

	* Move actions for options to functions
	* Add two levels of verbosity

2011-10-08  Anthony G. Basile <blueness@gentoo.org>

	* Add python pax module and revdep-pax
	* Add poc/paxmark-libs

2011-10-03  Anthony G. Basile <blueness@gentoo.org>

	* Code cleanup and fixed make check
	* Add poc/paxctl-xattr

2011-09-27  Anthony G. Basile <blueness@gentoo.org>

	* Code cleanup and fix PT_PAX flag setting

2011-08-18  Anthony G. Basile <blueness@gentoo.org>

	* Add paxctl-ng

2011-04-14  Anthony G. Basile <blueness@gentoo.org>

	* Initial release
	* Add fix-gnustack
-----

Copyright (C) 2011  Anthony G. Basile

Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.